# resources

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  carbon-resourcesConfig.cmake  designDocuments.html  genindex.html  guides.html  index.html  installation.html  overviewDocuments.html  quickStart.html  search.html  searchindex.js  tools.html  vcpkg-configuration.json  vcpkg.json
cli/: CMakeLists.txt
cli/src/: ApplyPatchCliOperation.cpp  ApplyPatchCliOperation.h  Cli.cpp  Cli.h  CliOperation.cpp  CliOperation.h  CreateBundleCliOperation.cpp  CreateBundleCliOperation.h  CreatePatchCliOperation.cpp  CreatePatchCliOperation.h  CreateResourceGroupCliOperation.cpp  CreateResourceGroupCliOperation.h  Defines.h  DiffResourceGroupCliOperation.cpp  DiffResourceGroupCliOperation.h  MergeResourceGroupCliOperation.cpp  MergeResourceGroupCliOperation.h  RemoveResourcesCliOperation.cpp  RemoveResourcesCliOperation.h  UnpackBundleCliOperation.cpp  UnpackBundleCliOperation.h  main.cpp
tests/: CMakeLists.txt
tests/src/: CarbonResourcesCliTest.cpp  CarbonResourcesLibraryTest.cpp  CarbonResourcesTestFixture.cpp  CarbonResourcesTestFixture.h  CliTestFixture.cpp  CliTestFixture.h  ResourceToolsLibraryTest.cpp  ResourcesCliTest.cpp  ResourcesLibraryTest.cpp  ResourcesTestFixture.cpp  ResourcesTestFixture.h
tests/testData/Bundle/: BundleResourceGroup.yaml  resFileIndexShort.txt
tests/testData/Bundle/LocalRemoteChunks/0f/: 0f0b9ef490c30478_5033453d903740ed111246e0424aea43
tests/testData/Bundle/LocalRemoteChunks/13/: 13c25237d370c87c_daae1be8a1cb4e6ef85efec1b5bcbf86
tests/testData/Bundle/LocalRemoteChunks/1b/: 1b833499e47b313f_815cd498b2f50d3de5fd577259ce61a9
tests/testData/Bundle/LocalRemoteChunks/20/: 20c748abbc9faede_149efd04f6e3410c643500656670a4a5
tests/testData/Bundle/LocalRemoteChunks/21/: 210a95f954fea02f_35604f3af72b5d163f5725daebcafec1
tests/testData/Bundle/LocalRemoteChunks/23/: 234d1f1a29522a7b_4f64a2a9ed02b3ecc2368ae9c6fdb5a1
tests/testData/Bundle/LocalRemoteChunks/29/: 29b96dfd774f8937_caaf0b4a528f2a18cfff52df578939fe
tests/testData/Bundle/LocalRemoteChunks/2b/: 2b5fd14e7ba80e47_19fdd769b3b31864b17996c69626800b  2ba2bab95aebc114_e4f1664441d0239e5e224c11bfe677b0
tests/testData/Bundle/LocalRemoteChunks/2c/: 2c2ef81c5e50acc7_5f887e64d53df8adad76df674d723cc7  2c2ef81c5e50acc7_9a36839a451c7f183e7221b6f7ae0f88
tests/testData/Bundle/LocalRemoteChunks/2f/: 2fdcfa5b0315b897_4871fc562da801bfa89ff1ce058117d0
tests/testData/Bundle/LocalRemoteChunks/30/: 3020ce9dcee6be89_b5436a0b9dd43037cca84926608c4f76
tests/testData/Bundle/LocalRemoteChunks/32/: 3210bcaaafb3e121_25dd018ad8c58e9833dd3313fa6c64b2  3210bcaaafb3e121_49aa97b2773e41e4b4d3513f536972ba  32dcea9283e21932_33da2ee422d0d81e4d542c88ffeba70d
tests/testData/Bundle/LocalRemoteChunks/36/: 36e652c08b11d75d_8d7494d34417015db4d766fbb358c23c  36e652c08b11d75d_a5612c360700d644e85be873ff4bca71
tests/testData/Bundle/LocalRemoteChunks/38/: 38d5c79009ec961a_8f5345eac13dc26d7483c695c60eeb23
tests/testData/Bundle/LocalRemoteChunks/44/: 444868e4bf76386c_60a89cb4f1cf10831885c7c84b047cc4
tests/testData/Bundle/LocalRemoteChunks/45/: 4596dd3a236115e0_a64d4afd997e44d2a104ad56caa92f82  4596dd3a236115e0_f820e54add8e967cee34f838a32c3ef2
tests/testData/Bundle/LocalRemoteChunks/49/: 49e71da5fe161753_510c8b03c25bc0077a60bbd00cc4e20e
tests/testData/Bundle/LocalRemoteChunks/4f/: 4fe137de4fc56e5e_4f2e68ea5a4bf4e193a9ae5334e00ae4  4fe137de4fc56e5e_70dadc3cb12f0417a5cb32aec9d54ae5
tests/testData/CompressedFiles/: ab5cde4fbbf82fb6_6a9d6d4c6015616877b77865209c5064  e9f7b62a4b490c58_271c8036e4eae5515053e924a0a39e0f
tests/testData/CreateBundle/: BundleResourceGroup.yaml
tests/testData/CreateResourceFiles/: ResourceGroup.yaml  ResourceGroupMac.csv  ResourceGroupMacOS.yaml  ResourceGroupMacOSPrefixed.csv  ResourceGroupWindows.csv  ResourceGroupWindows.yaml  ResourceGroupWindowsPrefixed.csv
tests/testData/CreateResourceFiles/ResourceFiles/: FileA.txt  FileB.txt  FileC.txt
tests/testData/Indicies/: BinaryResourceGroup_v0_1_0.yaml  binaryFileIndex_v0_0_0.txt  binaryFileIndex_v0_1_0.yaml  resFileIndexShort_v0_0_0.txt  resFileIndex_v0_0_0-OutOfBoundsBinaryOp.txt  resFileIndex_v0_0_0_INVALID.txt  resFileIndex_v0_0_0_NONESENSE.txt
tests/testData/Patch/: PatchResourceGroup.yaml  PatchResourceGroup_previousBuild_latestBuild.yaml  resFileIndexShort_build_next.txt  resFileIndexShort_build_previous.txt
tests/testData/Patch/NextBuildResources/: introMovie.txt  testResource2.txt
tests/testData/Patch/Old/: PatchResourceGroup_previousBuild_latestBuild.yaml
tests/testData/Patch/PreviousBuildResources/: testResource.txt
tests/testData/PatchWithInputChunk/: PatchResourceGroup_previousBuild_latestBuild.yaml  PatchWithInputChunk - Shortcut.lnk  resFileIndexShort_build_next.txt  resFileIndexShort_build_previous.txt
tests/testData/PatchWithInputChunk/NextBuildResources/: introMoviePrefixed.txt  introMovieSomewhatChanged.txt  videoCardCategories.yaml
tests/testData/ResourceGroups/: EmptyResourceGroup.yaml  HigherMajorVersion.yaml  HigherMinorVersion.yaml
tests/testData/resourcesLocal/d2/: d27f229b13a3c94a_61a31331c3c602e8cfa6857e2897677b
tests/testData/resourcesOnBranch/: introMovie.txt
tests/testData/resourcesOnCdn/a9/: a9d1721dd5cc6d54_e6bbb2df307e5a9527159a4c971034b5
tests/testData/resourcesRemote/a9/: a9d1721dd5cc6d54_4d7a8d216f4c8c5c6379476c0668fe84
tools/: CMakeLists.txt
tools/include/: BundleStreamIn.h  BundleStreamOut.h  ChunkIndex.h  CompressedFileDataStreamOut.h  Downloader.h  FileDataStreamIn.h  FileDataStreamOut.h  GzipCompressionStream.h  GzipDecompressionStream.h  Md5ChecksumStream.h  Patching.h  ResourceTools.h  RollingChecksum.h  ScopedFile.h  StatusCallback.h
tools/src/: BundleStreamIn.cpp  BundleStreamIn.h  BundleStreamOut.cpp  ChunkIndex.cpp  CompressedFileDataStreamOut.cpp  Downloader.cpp  FileDataStreamIn.cpp  FileDataStreamOut.cpp  GzipCompressionStream.cpp  GzipDecompressionStream.cpp  Md5ChecksumStream.cpp  Patching.cpp  ResourceTools.cpp  RollingChecksum.cpp  ScopedFile.cpp
(+246 files in other folders)
